--- a/misc programs/css/css example.html
+++ b/misc programs/css/css example.html
@@ -68,7 +68,7 @@
             <h1>The Power Of CSS</h1>
             <hr class="hr">
             <h2>Same Page, Completely Different Looks</h2>
-            All the changes you get in this example are <b>PURELY CSS</b> meaning that the buttons are not changing the HTML at all. Yes. CSS can do this, and a <b>LOT</b> <a href="https://css-tricks.com/the-shapes-of-css/">mo</a><a href="https://css-tricks.com/drawing-images-with-css-gradients/">re</a>. Although,  did have to re-style the line. I tried to re-style it to default, but it is probably not perfect I was also unable to restyle the links(for some).
+            All the changes you get in this example are <b>PURELY CSS</b> meaning that the buttons are not changing the HTML at all. Yes. CSS can do this, and a <b>LOT</b> <a href="https://css-tricks.com/the-shapes-of-css/">mo</a><a href="https://css-tricks.com/drawing-images-with-css-gradients/">re</a>. Although,  did have to re-style the line. I tried to re-style it to default, but it is probably not perfect I was also unable to restyle the links.
             <h2>No CSS?</h2>
             You <b>NEED</b> CSS, <button onclick="changeSheet('');">this</button> is why. Tap that button and go to "ugly-land". This is why CSS exists. Before CSS, your wbsite either had to look like this, or you had to use &lt;color&gt;, &lt;font&gt;, &ltblink&gt;, etc. tags!! This is why CSS is so important. Now, <a>GO LEARN IT!</a>
           </div>
