--- a/pages/about.html
+++ b/pages/about.html
@@ -25,6 +25,8 @@
     <div class="cart" onclick="fold(this);">
       <i class="fas fa-shopping-cart"></i>
       <span id= "num">0</span>
+      &nbsp;
+      &nbsp;
       <a onclick="button();" href="buy.html">Go To Cart</a>
       &nbsp;&nbsp;
       <a onclick="button();resetCart();" id="empty">Empty Cart</a>
