--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <div class="cart" onclick="fold(this);">
       <i class="fas fa-shopping-cart"></i>
       <span id= "num">0</span>
+      &nbsp;
+      &nbsp;
       <a onclick="button();" href="pages/buy.html">Go To Cart</a>
       &nbsp;
       &nbsp;
