--- a/pages/cart.html
+++ b/pages/cart.html
@@ -1,2 +1,2 @@
 CARTPAGECARTPAGECARTPAGECARTPAGECARTPAGECARTPAGECARTPAGECARTPAGECARTPAGECARTPAGECARTPAGECARTPAGECARTPAGECARTPAGECARTPAGECARTPAGE
-<a href=https://tinker-house-new.alextheperson.repl.co/pages/buy.html>Go back to tinker house
+<a href="buy.html">Go back to tinker house</a>
