made link in story statement

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <h1>Our Story</h1>
       <hr>
       <p>
-        Tinker House(formerly named Circuit Circus), was started because of a craft fair. A long time ago I(Alex) was going to be participating in a craft fair. I knew I wanted to sell circuitry kits, because I thought 'why aren't there any electronics kits made by kids?' and that is why I stared Circuit Circus. The craft fair went <b>very</b> poorly but it also went kind of well. I recently found out that <i>Circuit Circus</i> is the name of a inderactive design studio, so I changed the name to Tinker House. I also thought 'Tinker House' fit a little better. Later a friend named Zach asked if he could be a part of Tinker House and I agreed. He then went on to help with a conact response sorting program, and helped build this website.<br>
+        Tinker House(formerly named Circuit Circus), was started because of a craft fair. A long time ago I(Alex) was going to be participating in a craft fair. I knew I wanted to sell circuitry kits, because I thought 'why aren't there any electronics kits made by kids?' and that is why I stared Circuit Circus. The craft fair went <b>very</b> poorly but it also went kind of well. I recently found out that <a href="https://www.circuit-circus.com/">Circuit Circus</a> is the name of a inderactive design studio, so I changed the name to Tinker House. I also thought 'Tinker House' fit a little better. Later a friend named Zach asked if he could be a part of Tinker House and I agreed. He then went on to help with a conact response sorting program, and helped build this website.<br>
         </p>
       <p><b>That Is Our Story.</b></p>
   </body>
