started adding polylines to svg generator

--- a/misc programs/svg/svg.html
+++ b/misc programs/svg/svg.html
@@ -39,44 +39,44 @@
     <script>displayCart()</script>
     <div class="box">
       <svg height="210" width="410">
-        <line x1="50" y1="10" x2="50" y2="100" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="10" y1="10" x2="100" y2="10" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="110" y1="10" x2="160" y2="10" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="135" y1="10" x2="135" y2="100" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="110" y1="99" x2="160" y2="99" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="170" y1="10" x2="170" y2="100" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="220" y1="10" x2="220" y2="100" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="170" y1="10" x2="220" y2="60" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="230" y1="10" x2="230" y2="100" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="230" y1="60" x2="280" y2="10" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="240" y1="50" x2="280" y2="100" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="290" y1="10" x2="290" y2="100" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="290" y1="50" x2="340" y2="50" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="290" y1="10" x2="340" y2="10" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="290" y1="100" x2="340" y2="100" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="350" y1="10" x2="350" y2="100" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="350" y1="10" x2="400" y2="25" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="350" y1="50" x2="400" y2="25" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="350" y1="50" x2="400" y2="100" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="10" y1="150" x2="100" y2="150" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="10" y1="110" x2="10" y2="200" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="100" y1="110" x2="100" y2="200" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="110" y1="110" x2="110" y2="200" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="110" y1="110" x2="160" y2="110" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="160" y1="110" x2="160" y2="200" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="110" y1="200" x2="160" y2="200" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="170" y1="110" x2="170" y2="200" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="170" y1="200" x2="220" y2="200" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="220" y1="110" x2="220" y2="200" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="230" y1="110" x2="280" y2="110" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="230" y1="110" x2="230" y2="150" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="230" y1="150" x2="280" y2="150" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="280" y1="150" x2="280" y2="200" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="230" y1="200" x2="280" y2="200" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="290" y1="150" x2="340" y2="150" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="290" y1="110" x2="340" y2="110" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="290" y1="110" x2="290" y2="200" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
-        <line x1="290" y1="200" x2="340" y2="200" style="stroke: rgb(255, 112, 0); stroke-width: 2;"></line>
+        <line x1="50" y1="10" x2="50" y2="100" class="title"></line>
+        <line x1="10" y1="10" x2="100" y2="10" class="title"></line>
+        <line x1="110" y1="10" x2="160" y2="10" class="title"></line>
+        <line x1="135" y1="10" x2="135" y2="100" class="title"></line>
+        <line x1="110" y1="99" x2="160" y2="99" class="title"></line>
+        <line x1="170" y1="10" x2="170" y2="100" class="title"></line>
+        <line x1="220" y1="10" x2="220" y2="100" class="title"></line>
+        <line x1="170" y1="10" x2="220" y2="60" class="title"></line>
+        <line x1="230" y1="10" x2="230" y2="100" class="title"></line>
+        <line x1="230" y1="60" x2="280" y2="10" class="title"></line>
+        <line x1="240" y1="50" x2="280" y2="100" class="title"></line>
+        <line x1="290" y1="10" x2="290" y2="100" class="title"></line>
+        <line x1="290" y1="50" x2="340" y2="50" class="title"></line>
+        <line x1="290" y1="10" x2="340" y2="10" class="title"></line>
+        <line x1="290" y1="100" x2="340" y2="100" class="title"></line>
+        <line x1="350" y1="10" x2="350" y2="100" class="title"></line>
+        <line x1="350" y1="10" x2="400" y2="25" class="title"></line>
+        <line x1="350" y1="50" x2="400" y2="25" class="title"></line>
+        <line x1="350" y1="50" x2="400" y2="100" class="title"></line>
+        <line x1="10" y1="150" x2="100" y2="150" class="title"></line>
+        <line x1="10" y1="110" x2="10" y2="200" class="title"></line>
+        <line x1="100" y1="110" x2="100" y2="200" class="title"></line>
+        <line x1="110" y1="110" x2="110" y2="200" class="title"></line>
+        <line x1="110" y1="110" x2="160" y2="110" class="title"></line>
+        <line x1="160" y1="110" x2="160" y2="200" class="title"></line>
+        <line x1="110" y1="200" x2="160" y2="200" class="title"></line>
+        <line x1="170" y1="110" x2="170" y2="200" class="title"></line>
+        <line x1="170" y1="200" x2="220" y2="200" class="title"></line>
+        <line x1="220" y1="110" x2="220" y2="200" class="title"></line>
+        <line x1="230" y1="110" x2="280" y2="110" class="title"></line>
+        <line x1="230" y1="110" x2="230" y2="150" class="title"></line>
+        <line x1="230" y1="150" x2="280" y2="150" class="title"></line>
+        <line x1="280" y1="150" x2="280" y2="200" class="title"></line>
+        <line x1="230" y1="200" x2="280" y2="200" class="title"></line>
+        <line x1="290" y1="150" x2="340" y2="150" class="title"></line>
+        <line x1="290" y1="110" x2="340" y2="110" class="title"></line>
+        <line x1="290" y1="110" x2="290" y2="200" class="title"></line>
+        <line x1="290" y1="200" x2="340" y2="200" class="title"></line>
       </svg>
       <div style="display:flex;height:300px;">
         <div style="width:50%;margin:5px;border:1px solid black;height:100%;padding:5px;" id="control">
@@ -92,6 +92,24 @@
             <span class="left">Radius</span><span class="right">Fill Color</span><br>
             <input id="r" value="0" style="width:50%" type="number" oninput="document.getElementById(whichOne).setAttribute('r', this.value)"><input id="fill" value="#000000" style="width:50%" type="color" oninput="document.getElementById(whichOne).setAttribute('fill', this.value)">
           </div>
+          <div id="polyline" style="display:none;">
+            <span class="left">Points</span>
+            <table>
+              <tr>
+                <th></th>
+                <th>Point 1</th>
+                <th>Point 2</th>
+                <th>Point 3</th>
+                <td><button>Add Point</button></td>
+              </tr>
+              <tr>
+                <th>X</th>
+                <th>5</th>
+                <th>100</th>
+                <th>100</th>
+              </tr>
+            </table>
+          </div>
           <span class="left">Stroke Color</span><span class="right">Stroke Width</span><br>
           <input id="color" value="#ff0000" style="width:50%" type="color" oninput="document.getElementById(whichOne).setAttribute('stroke', this.value)"><input id="width" value="0" style="width:50%" type="number" oninput="document.getElementById(whichOne).style.strokeWidth=this.value">
           <div style="display:inline-block;margin-right:20px;" onclick="add(this);" onmouseover="this.getElementsByTagName('span')[0].classList.remove('far');this.getElementsByTagName('span')[0].classList.add('fas')" onmouseout="this.getElementsByTagName('span')[0].classList.remove('fas');this.getElementsByTagName('span')[0].classList.add('far')">
@@ -99,6 +117,7 @@
             <select id="type" onclick="button();">
               <option value="line">Line</option>
               <option value="circle">Circle</option>
+              <option value="polyline">Polyline</option>
             </select>
           </div>
           <div style="display:inline-block;margin-right:20px;" onclick="removeElement()" onmouseover="this.getElementsByTagName('span')[0].classList.remove('far');this.getElementsByTagName('span')[0].classList.add('fas')" onmouseout="this.getElementsByTagName('span')[0].classList.remove('fas');this.getElementsByTagName('span')[0].classList.add('far')">
