fixed svg generator title svg

--- a/misc programs/svg/svg.html
+++ b/misc programs/svg/svg.html
@@ -39,44 +39,44 @@
     <script>displayCart()</script>
     <div class="box">
       <svg height="210" width="410">
-        <line x1="50" y1="10" x2="50" y2="100" class="title"></line>
-        <line x1="10" y1="10" x2="100" y2="10" class="title"></line>
-        <line x1="110" y1="10" x2="160" y2="10" class="title"></line>
-        <line x1="135" y1="10" x2="135" y2="100" class="title"></line>
-        <line x1="110" y1="99" x2="160" y2="99" class="title"></line>
-        <line x1="170" y1="10" x2="170" y2="100" class="title"></line>
-        <line x1="220" y1="10" x2="220" y2="100" class="title"></line>
-        <line x1="170" y1="10" x2="220" y2="60" class="title"></line>
-        <line x1="230" y1="10" x2="230" y2="100" class="title"></line>
-        <line x1="230" y1="60" x2="280" y2="10" class="title"></line>
-        <line x1="240" y1="50" x2="280" y2="100" class="title"></line>
-        <line x1="290" y1="10" x2="290" y2="100" class="title"></line>
-        <line x1="290" y1="50" x2="340" y2="50" class="title"></line>
-        <line x1="290" y1="10" x2="340" y2="10" class="title"></line>
-        <line x1="290" y1="100" x2="340" y2="100" class="title"></line>
-        <line x1="350" y1="10" x2="350" y2="100" class="title"></line>
-        <line x1="350" y1="10" x2="400" y2="25" class="title"></line>
-        <line x1="350" y1="50" x2="400" y2="25" class="title"></line>
-        <line x1="350" y1="50" x2="400" y2="100" class="title"></line>
-        <line x1="10" y1="150" x2="100" y2="150" class="title"></line>
-        <line x1="10" y1="110" x2="10" y2="200" class="title"></line>
-        <line x1="100" y1="110" x2="100" y2="200" class="title"></line>
-        <line x1="110" y1="110" x2="110" y2="200" class="title"></line>
-        <line x1="110" y1="110" x2="160" y2="110" class="title"></line>
-        <line x1="160" y1="110" x2="160" y2="200" class="title"></line>
-        <line x1="110" y1="200" x2="160" y2="200" class="title"></line>
-        <line x1="170" y1="110" x2="170" y2="200" class="title"></line>
-        <line x1="170" y1="200" x2="220" y2="200" class="title"></line>
-        <line x1="220" y1="110" x2="220" y2="200" class="title"></line>
-        <line x1="230" y1="110" x2="280" y2="110" class="title"></line>
-        <line x1="230" y1="110" x2="230" y2="150" class="title"></line>
-        <line x1="230" y1="150" x2="280" y2="150" class="title"></line>
-        <line x1="280" y1="150" x2="280" y2="200" class="title"></line>
-        <line x1="230" y1="200" x2="280" y2="200" class="title"></line>
-        <line x1="290" y1="150" x2="340" y2="150" class="title"></line>
-        <line x1="290" y1="110" x2="340" y2="110" class="title"></line>
-        <line x1="290" y1="110" x2="290" y2="200" class="title"></line>
-        <line x1="290" y1="200" x2="340" y2="200" class="title"></line>
+        <line x1="50" y1="10" x2="50" y2="100" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="10" y1="10" x2="100" y2="10" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="110" y1="10" x2="160" y2="10" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="135" y1="10" x2="135" y2="100" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="110" y1="99" x2="160" y2="99" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="170" y1="10" x2="170" y2="100" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="220" y1="10" x2="220" y2="100" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="170" y1="10" x2="220" y2="60" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="230" y1="10" x2="230" y2="100" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="230" y1="60" x2="280" y2="10" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="240" y1="50" x2="280" y2="100" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="290" y1="10" x2="290" y2="100" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="290" y1="50" x2="340" y2="50" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="290" y1="10" x2="340" y2="10" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="290" y1="100" x2="340" y2="100" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="350" y1="10" x2="350" y2="100" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="350" y1="10" x2="400" y2="25" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="350" y1="50" x2="400" y2="25" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="350" y1="50" x2="400" y2="100" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="10" y1="150" x2="100" y2="150" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="10" y1="110" x2="10" y2="200" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="100" y1="110" x2="100" y2="200" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="110" y1="110" x2="110" y2="200" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="110" y1="110" x2="160" y2="110" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="160" y1="110" x2="160" y2="200" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="110" y1="200" x2="160" y2="200" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="170" y1="110" x2="170" y2="200" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="170" y1="200" x2="220" y2="200" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="220" y1="110" x2="220" y2="200" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="230" y1="110" x2="280" y2="110" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="230" y1="110" x2="230" y2="150" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="230" y1="150" x2="280" y2="150" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="280" y1="150" x2="280" y2="200" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="230" y1="200" x2="280" y2="200" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="290" y1="150" x2="340" y2="150" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="290" y1="110" x2="340" y2="110" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="290" y1="110" x2="290" y2="200" style="stroke: #ff7000;stroke-width: 2;"></line>
+        <line x1="290" y1="200" x2="340" y2="200" style="stroke: #ff7000;stroke-width: 2;"></line>
       </svg>
       <div style="display:flex;height:300px;">
         <div style="width:50%;margin:5px;border:1px solid black;height:100%;padding:5px;" id="control">
