--- a/pages/buy.html
+++ b/pages/buy.html
@@ -8,6 +8,7 @@
     <link href="../css/style.css" rel="stylesheet" type="text/css" />
     <link href="../css/links.css" rel="stylesheet" type="text/css" />
     <link href="../css/inputs.css" rel="stylesheet" type="text/css" />
+    <link href="../css/loader.css" rel="stylesheet" type="text/css" />
     <script src="https://kit.fontawesome.com/cb271d7bc9.js"></script>
   </head>
   <body>
@@ -35,6 +36,10 @@
       <script>displayCart()</script>
     </div>
     <div class="box">
+      <div class="loader-box">
+        <img src="../images/loader/icon_house.png" class="house">
+        <img src="../images/loader/icon_gear.png" class="gear">
+      </div>
       <div class="grid">
         <div class="flip-card">
           <div class="name">
