--- a/pages/cart/index.html
+++ b/pages/cart/index.html
@@ -1,2 +1,2 @@
 CARTPAGECARTPAGECARTPAGECARTPAGECARTPAGECARTPAGECARTPAGECARTPAGECARTPAGECARTPAGECARTPAGECARTPAGECARTPAGECARTPAGECARTPAGECARTPAGE
-<a href="buy.html">Go back to tinker house</a>
+<a href="../buy">Go back to tinker house</a>
