--- a/pages/instructions/index.html
+++ b/pages/instructions/index.html
@@ -3,24 +3,24 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link href="../images/icon.png" rel="icon" />
+    <link href="../../images/icon.png" rel="icon" />
     <title>Tinker House | Instructions</title>
-    <link href="../css/style.css" rel="stylesheet" type="text/css" />
-    <link href="../css/links.css" rel="stylesheet" type="text/css" />
-    <link href="../css/inputs.css" rel="stylesheet" type="text/css" />
+    <link href="../../css/style.css" rel="stylesheet" type="text/css" />
+    <link href="../../css/links.css" rel="stylesheet" type="text/css" />
+    <link href="../../css/inputs.css" rel="stylesheet" type="text/css" />
     <script src="https://kit.fontawesome.com/cb271d7bc9.js"></script>
   </head>
   <body>
     <script src="../script.js"></script>
     <div class="header">
-      <img src="../images/icon.png" class="header-img"/>
+      <img src="../../images/icon.png" class="header-img"/>
       <h1>Tinker House</h1>
-      <a href="../index.html" class="nav" onmouseover="cock(this)" onmouseout="uncock(this)"><i class="fas fa-home"></i>Home</a>
-      <a href="buy.html" class="nav" onmouseover="cock(this)" onmouseout="uncock(this)"><i class="fas fa-shopping-cart"></i>Buy</a>
+      <a href="../../index.html" class="nav" onmouseover="cock(this)" onmouseout="uncock(this)"><i class="fas fa-home"></i>Home</a>
+      <a href="../buy" class="nav" onmouseover="cock(this)" onmouseout="uncock(this)"><i class="fas fa-shopping-cart"></i>Buy</a>
       <a href="" class="nav active" onmouseover="cock(this)" onmouseout="uncock(this)"><i class="fas fa-wrench"></i>Instructions</a>
-      <a href="about.html" class="nav" onmouseover="cock(this)" onmouseout="uncock(this)"><i class="fas fa-book-open"></i></i>About</a>
-      <a href="faq.html" class="nav" onmouseover="cock(this)" onmouseout="uncock(this)"><i class="fas fa-question-circle"></i>FAQ</a>
-      <a href="contact.html" class="nav" onmouseover="cock(this)" onmouseout="uncock(this)"><i class="fas fa-paper-plane"></i>Contact</a>
+      <a href="../about" class="nav" onmouseover="cock(this)" onmouseout="uncock(this)"><i class="fas fa-book-open"></i></i>About</a>
+      <a href="../faq" class="nav" onmouseover="cock(this)" onmouseout="uncock(this)"><i class="fas fa-question-circle"></i>FAQ</a>
+      <a href="../contact" class="nav" onmouseover="cock(this)" onmouseout="uncock(this)"><i class="fas fa-paper-plane"></i>Contact</a>
     </div>
     <div class="cart" onclick="fold(this);">
       <i class="fas fa-shopping-cart"></i>
@@ -42,11 +42,11 @@
           </div>
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="../images/icons/logic.png">
+              <img src="../../images/icons/logic.png">
             </div>
             <div class="flip-card-back">
               Very logical.<br>
-              <button onclick="window.location.href = '../tutorials/logic.html'">DO IT</button>
+              <button onclick="window.location.href = '../../tutorials/logic.html'">DO IT</button>
             </div>
           </div>
         </div>
@@ -59,11 +59,11 @@
           </div>
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="../images/icons/html-logo.png">
+              <img src="../../images/icons/html-logo.png">
             </div>
             <div class="flip-card-back">
               Run your own HTML!<br>
-              <button onclick="window.location.href = '../tutorials/editor.html'">DO IT</button>
+              <button onclick="window.location.href = '../../tutorials/editor.html'">DO IT</button>
             </div>
           </div>
         </div>
@@ -76,11 +76,11 @@
           </div>
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="../images/icons/program-logo.png">
+              <img src="../../images/icons/program-logo.png">
             </div>
             <div class="flip-card-back">
               Lot of weird programs!<br>
-              <button onclick="window.location.href = '../tutorials/misc.html'">DO IT</button>
+              <button onclick="window.location.href = '../../tutorials/misc.html'">DO IT</button>
             </div>
           </div>
         </div>
