--- a/misc programs/css/css example.html
+++ b/misc programs/css/css example.html
@@ -8,8 +8,9 @@
 	<title>Tinker House | Misc Programs | CSS Example</title>
 	<link href="../../css/style.css" rel="stylesheet" type="text/css" />
 	<link href="../../css/links.css" rel="stylesheet" type="text/css" />
-	<script src="https://kit.fontawesome.com/cb271d7bc9.js">
-	</script>
+	<script src="https://kit.fontawesome.com/cb271d7bc9.js"></script>
+  <script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 	<link href="css1.css" rel="stylesheet" type="text/css" />
 </head>
 
