--- a/tutorials/logic.html
+++ b/tutorials/logic.html
@@ -9,6 +9,8 @@
     <link href="../css/links.css" rel="stylesheet" type="text/css" />
     <link href="../css/inputs.css" rel="stylesheet" type="text/css" />
     <script src="https://kit.fontawesome.com/cb271d7bc9.js"></script>
+    <script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
   </head>
   <body>
     <script src="../script.js"></script>
