--- a/pages/faq/index.html
+++ b/pages/faq/index.html
@@ -9,6 +9,8 @@
     <link href="../../css/links.css" rel="stylesheet" type="text/css" />
     <link href="../../css/inputs.css" rel="stylesheet" type="text/css" />
     <script src="https://kit.fontawesome.com/cb271d7bc9.js"></script>
+    <script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
   </head>
   <body>
     <script src="../../script.js"></script>
@@ -38,6 +40,7 @@
       <h1><img src="../../images/icon.png" width="25px"> Our mission</h1>
       <hr>
       Our mission is to help people (short and tall) learn about circitry and programing(I programed this website with a friend named Zach). I offer kits to help people learn about electonics, and hopefully there will be some more stuff comming soon. <a href="about.html">More in About</a>
+      
     </div>
   </body>
 </html>
