Added c# to my list of languages

--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -57,8 +57,9 @@
         <a href="https://en.wikipedia.org/wiki/HTML" title="Wikipedia.org">HTML</a>, 
         <a href="https://en.wikipedia.org/wiki/JavaScript" title="Wikipedia.org">JavaScript</a>, 
         <a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets" title="Wikipedia.org">CSS</a>, 
-        <a href="https://en.wikipedia.org/wiki/Python_(programming_language)" title="Wikipedia.org">Python</a>, and 
-        <a href="https://en.wikipedia.org/wiki/C_(programming_language)" title="Wikipedia.org">C</a>.
+        <a href="https://en.wikipedia.org/wiki/Python_(programming_language)" title="Wikipedia.org">Python</a>,  
+        <a href="https://en.wikipedia.org/wiki/C_(programming_language)" title="Wikipedia.org">C</a>, and
+        <a href="https://en.wikipedia.org/wiki/C_Sharp_(programming_language)" title="Wikipedia.org">C#</a>.
       </p>
 
       <h3 style="margin-top:70px;">Zach</h3>
