--- a/pages/about.html
+++ b/pages/about.html
@@ -18,11 +18,11 @@
       <img src="../../images/icon.png" class="header-img"/>
       <h1>Tinker House</h1>
       <a href="../../index.html" class="nav" onmouseover="cock(this)" onmouseout="uncock(this)"><i class="fas fa-home"></i>Home</a>
-      <a href="../buy" class="nav" onmouseover="cock(this)" onmouseout="uncock(this)"><i class="fas fa-shopping-cart"></i>Buy</a>
-      <a href="../instructions" class="nav" onmouseover="cock(this)" onmouseout="uncock(this)"><i class="fas fa-wrench"></i>Instructions</a>
+      <a href="../buy.html" class="nav" onmouseover="cock(this)" onmouseout="uncock(this)"><i class="fas fa-shopping-cart"></i>Buy</a>
+      <a href="../instructions.html" class="nav" onmouseover="cock(this)" onmouseout="uncock(this)"><i class="fas fa-wrench"></i>Instructions</a>
       <a href="" class="nav active" onmouseover="cock(this)" onmouseout="uncock(this)"><i class="fas fa-book-open"></i>About</a>
-      <a href="../faq" class="nav" onmouseover="cock(this)" onmouseout="uncock(this)"><i class="fas fa-question-circle"></i>FAQ</a>
-      <a href="../contact" class="nav" onmouseover="cock(this)" onmouseout="uncock(this)"><i class="fas fa-paper-plane"></i>Contact</a>
+      <a href="../faq.html" class="nav" onmouseover="cock(this)" onmouseout="uncock(this)"><i class="fas fa-question-circle"></i>FAQ</a>
+      <a href="../contact.html" class="nav" onmouseover="cock(this)" onmouseout="uncock(this)"><i class="fas fa-paper-plane"></i>Contact</a>
     </div>
     <div class="cart" onclick="fold(this);">
       <i class="fas fa-shopping-cart"></i>
