Fixed File paths

--- a/pages/product.html
+++ b/pages/product.html
@@ -3,27 +3,27 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link href="../../images/icon.png" rel="icon" />
+    <link href="../images/icon.png" rel="icon" />
     <title>Tinker House | Product Description | </title>
-    <link href="../../css/style.css" rel="stylesheet" type="text/css" />
-    <link href="../../css/links.css" rel="stylesheet" type="text/css" />
-    <link href="../../css/inputs.css" rel="stylesheet" type="text/css" />
+    <link href="../css/style.css" rel="stylesheet" type="text/css" />
+    <link href="../css/links.css" rel="stylesheet" type="text/css" />
+    <link href="../css/inputs.css" rel="stylesheet" type="text/css" />
     <script src="https://kit.fontawesome.com/cb271d7bc9.js"></script>
     <script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
   </head>
   <body>
-    <script src="../../script.js"></script>
-    <script src="../../productDescriptions.js"></script>
+    <script src="../script.js"></script>
+    <script src="../productDescriptions.js"></script>
     <div class="header">
-      <img src="../../images/icon.png" class="header-img"/>
+      <img src="../images/icon.png" class="header-img"/>
       <h1>Tinker House</h1>
-      <a href="../../index.html" class="nav" onmouseover="cock(this)" onmouseout="uncock(this)"><i class="fas fa-home"></i>Home</a>
-      <a href="../buy" class="nav" onmouseover="cock(this)" onmouseout="uncock(this)"><i class="fas fa-shopping-cart"></i>Buy</a>
-      <a href="../instructions" class="nav" onmouseover="cock(this)" onmouseout="uncock(this)"><i class="fas fa-wrench"></i>Instructions</a>
-      <a href="../about" class="nav" onmouseover="cock(this)" onmouseout="uncock(this)"><i class="fas fa-book-open"></i>About</a>
-      <a href="../faq" class="nav" onmouseover="cock(this)" onmouseout="uncock(this)"><i class="fas fa-question-circle"></i>FAQ</a>
-      <a href="../contact" class="nav" onmouseover="cock(this)" onmouseout="uncock(this)"><i class="fas fa-paper-plane"></i>Contact</a>
+      <a href="../index.html" class="nav" onmouseover="cock(this)" onmouseout="uncock(this)"><i class="fas fa-home"></i>Home</a>
+      <a href="buy" class="nav" onmouseover="cock(this)" onmouseout="uncock(this)"><i class="fas fa-shopping-cart"></i>Buy</a>
+      <a href="instructions" class="nav" onmouseover="cock(this)" onmouseout="uncock(this)"><i class="fas fa-wrench"></i>Instructions</a>
+      <a href="about" class="nav" onmouseover="cock(this)" onmouseout="uncock(this)"><i class="fas fa-book-open"></i>About</a>
+      <a href="faq" class="nav" onmouseover="cock(this)" onmouseout="uncock(this)"><i class="fas fa-question-circle"></i>FAQ</a>
+      <a href="contact" class="nav" onmouseover="cock(this)" onmouseout="uncock(this)"><i class="fas fa-paper-plane"></i>Contact</a>
     </div>
     <div class="cart" onclick="fold(this);">
       <i class="fas fa-shopping-cart"></i>
